--- a/waybar/style.css
+++ b/waybar/style.css
@@ -61,7 +61,11 @@ button:hover {
 #tray:hover,
 #mode:hover,
 #custom-menu:hover,
-#custom-systeminfo:hover {
+#custom-systeminfo:hover,
+#custom-browser:hover,
+#custom-filemanager:hover,
+#custom-terminal:hover,
+#custom-touchpad:hover {
     background: rgba(200, 200, 200, 0.3);
 }
 
@@ -76,7 +80,11 @@ button:hover {
 #tray,
 #mode,
 #custom-menu,
-#custom-systeminfo {
+#custom-systeminfo,
+#custom-browser,
+#custom-filemanager,
+#custom-terminal,
+#custom-touchpad {
     padding: 0 5px;
     color: #ffffff;
     background: rgba(100, 100, 100, 0.5);
